混选中视频不能参与多选

--- a/photopickerdemo/src/main/res/values/colors.xml
+++ b/photopickerdemo/src/main/res/values/colors.xml
@@ -4,6 +4,9 @@
     <color name="view_color">#d3d3d3</color>
 
     <color name="colorPrimary">#38393E</color>
+
     <color name="colorPrimaryDark">#2F3034</color>
+
+    <color name="colorPrimaryAlpha">#44000000</color>
 
 </resources>
