--- a/PhotoPicker/src/main/res/layout/__picker_item_photo.xml
+++ b/PhotoPicker/src/main/res/layout/__picker_item_photo.xml
@@ -2,7 +2,7 @@
 <me.iwf.photopicker.widget.SquareItemLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    >
+    xmlns:tools="http://schemas.android.com/tools">
   <ImageView
       android:padding="1dip"
       android:layout_gravity="center"
@@ -19,7 +19,7 @@
       android:layout_alignParentRight="true"
       android:clickable="true"
       android:paddingTop="10dip"
-      android:paddingRight="10dip"
+      android:paddingRight="20dip"
       android:paddingLeft="20dip"
       android:paddingBottom="20dip"
       android:id="@+id/v_selected"
@@ -27,5 +27,40 @@
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       />
+
+  <FrameLayout
+      android:id="@+id/video_info_layout"
+      android:layout_width="match_parent"
+      android:layout_height="wrap_content"
+      android:layout_alignParentBottom="true"
+      android:background="#44000000"
+      android:paddingBottom="2dp"
+      android:paddingTop="4dp"
+      android:visibility="gone"
+      tools:visibility="visible">
+
+    <TextView
+        android:id="@+id/video_duration_txt"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center_vertical|left"
+        android:drawablePadding="4dp"
+        android:maxEms="6"
+        android:paddingLeft="4dp"
+        android:textSize="12sp"
+        android:textColor="#ffffff"
+        tools:text="00:30"/>
+
+    <TextView
+        android:id="@+id/video_size_txt"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center_vertical|right"
+        android:maxEms="4"
+        android:paddingRight="4dp"
+        android:textSize="12sp"
+        android:textColor="#ffffff"
+        tools:text="20M"/>
+  </FrameLayout>
 
 </me.iwf.photopicker.widget.SquareItemLayout>
